$Id: ChangeLog,v 1.233 2005/07/12 13:57:49 freckle Exp $

2005-07-12  Matthias Ringwald  <mringwal@.inf.ethz.ch>
    * os/threads.c: Found and fixed this bug: 
    http://permalink.gmane.org/gmane.comp.hardware.microcontrollers.ethernut/4023
    NutThreadWake changed readyQueue without critical section
    Improved docu on NutThreadRemoveQueue and NutThreadAddPriQueue

2005-07-07  Matthias Ringwald  <mringwal@.inf.ethz.ch>
    * os/timer.c: Stopped timers are removed by NutTimerProcessElapsed
    now. NutTimerStopAsync does not set tn_ticks to zero and relies
    on NutTimerProcessElapsed to do so when removing the stopped timer.
    This assures that a stopped timer is removed on next thread switch
    instead of staying in the nutTimerList until all previous timers 
    are elapsed.
    
2005-06-22  Matthias Ringwald  <mringwal@.inf.ethz.ch>
    * dev/null.c, include/dev/null.h: added /dev/null as devNull.
    write always returns len of bytes to write, read returns
    without read bytes and ioctl always returns ok.
    This can be used to discard output of printf statements.
    
2005-06-14  Matthias Ringwald  <mringwal@.inf.ethz.ch>
 	* os/timer.c: Fixed NutTimerStopAsync(): it now removes
    callback ptr, which actually stops the timer

2005-06-13  Ole Reinhardt <ole.reinhardt@embedded-it.de>
 	* dev/adc.c: Removed unnecessary NutExitCritical

2005-06-12  Harald Kipp  <harald.kipp@egnite.de>

	* arch/avr/os/timer.c: Timer configuration registers and values
	are now specified by preprocessor macros. This avoids code
	contamination with preprocessor conditionals. A note has been
	added to the documentation of NutDelay(), saying, that this
	code may not work. The timer interrupt handler had been moved
	to the hardware independent code. A new function CountCpuLoops()
	has been added to count the number of loops from timer start
	to timer overflow. In opposite to the previous check in
	NutComputeCpuClock(), this new routine will not use interrupts